Fixed the last blogpost center alignment issue and changed the colors of edit and Like button on post

--- a/css/bloglist.css
+++ b/css/bloglist.css
@@ -1,15 +1,24 @@
-.post {
-    position: relative;
-    width: 70%;
-    height: 91.5%;
-    background: #fff;
-    box-shadow:0 4px 10px 0 rgba(17, 4, 63, 0.2),0 4px 20px 0 rgba(79, 19, 97, 0.19);
-    margin: 10px 30px 10px 30px;
-    float:left;
-    border-radius: 15px;
-    align-self: center;
+/*Ensures a responsive layout*/
+.allPostsContainer {
+  display: flex;
+  flex-wrap:wrap;
+  flex-direction: row;
+  justify-content: center;
+  
 }
-    
+/*Ensuring two items per row across all viewports*/
+.post {
+    background: #fff;
+	#box-shadow:0 4px 10px 0 rgba(17, 4, 63, 0.2),0 4px 20px 0 rgba(79, 19, 97, 0.19);
+    margin: 1% 3% 1% 3%;
+    border-radius: 15px;
+	flex:0.3 0 35%;
+}
+.post {
+height:100%;
+}
+
+   
 .post-left {
     width: 15%;            
     max-width: 15%;
@@ -19,44 +28,38 @@
     font-weight: bold;
     color: #000;
 }
+
 .post-content {
-    width: 75%;           
+    width: 75%;   
     display: table-cell;
     text-align: left;
-    overflow: hidden;
+    overflow: hidden;/*Displays the text partially*/
     background-color: #E8E8E8;
     color: #000000;
     border-radius: 0 15px 15px 0;
-    padding: 0 20px;      
 }
+.post-description{
+    overflow: hidden;/*Displays the text partially*/
+    margin-top: 2%;
+	height:100px;
+}
+
 .post-title{
 font-family: 'Itim', cursive;
 font-weight: bold;
 overflow: hidden;
 color: #2b312b;
-font-size: 25px;
-height: 30px;
-}
-.post-more {
-float: right;
-cursor: pointer;
-font-size: 18px;
-margin-right: 0 !important;
-padding-right: 0 !important;
-padding-bottom: 10px;
-font-size: 30px;
-}
-.post-description{
-    height: 100%;
-    overflow: hidden;
-    margin: 10px 10px 10px 10px;
-    height: 100px;
-
+font-size: 150%;
+height: 30%;
+text-align:center;
+margin-top:0%;
+padding-top:0%
 }
 
 .post-desc{
-height: 100px;
-margin-bottom: 0 !important;
+height:70%;
+padding-left:2%;
+font-family: 'Itim';
 }
 
 body {
@@ -68,34 +71,28 @@ body {
     background-color: orange;
     background-size: 2000% 2000%;
 }
-.allPostsContainer {
-    display: grid;
-    grid-template-columns: auto auto;
-    grid-gap: 10px;
-    padding: 10px;
 
-    height: 80%;
-    width: 100%;
-
-}
 .header{
     background-color: orange;
 }
 
+/*The ... button*/
 #postDetails{
-    margin-left: 90%;
-    margin-top: 20px;
-    margin-bottom: 20px;
+	float: right;
+	margin-bottom:5%;
     border: none;
+	margin-right:2%;
+	background-color: #E8E8E8;
+}
+/*The delete modal button*/
+#trashPost{
+    border: none;
+	float: right;
+	margin-top:2%;
+	margin-right:2%;
+	background-color: #E8E8E8;
 }
 
-#trashPost{
-    width: 5px;
-    height: 5px;
-    border: none;
-    margin-left: 90%;
-    margin-top: 10px;
-}
 #yesButton{
     margin: 10px 30px 10px 10px;
     width: 60%;
@@ -111,17 +108,9 @@ body {
     border-end-start-radius: 0;
     border-end-end-radius: 0;
 }
+
 #deleteText{
     text-align: center;
     font-family: sans-serif;
     font-weight: bold;
-}
-.btn-group{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-#last_post{
-    grid-area: unset;
-    align-self: center;
 }
